@@ -22,15 +22,15 @@ public interface EventSystem {
     ScheduledExecutorService SCHEDULED_EXECUTOR_SERVICE = Executors.newSingleThreadScheduledExecutor();
 
     static void showRecognizeStatus(ClientWorld world) {
-        if (MinecraftClient.getInstance().player instanceof ClientPlayerEntity player
+        if (MinecraftClient.getInstance().player != null
                 && MinecraftClient.getInstance().currentScreen == null) {
             if (AudioRecorder.instance() == null) {
-                player.sendMessage(Text.translatable("message.mcmti.audioInputDeviceLoadFailed"), true);
+                MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.audioInputDeviceLoadFailed"), true);
             } else if (SpeechRecognizer.instance() == null) {
-                player.sendMessage(Text.translatable("message.mcmti.whisperModelLoadFailed"), true);
+                MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.whisperModelLoadFailed"), true);
             } else if (McmtiConfig.mode != McmtiConfig.Mode.AUTO_SEND
                     && MicrophoneTextInput.RECOGNIZE_KEY.isPressed()) {
-                player.sendMessage(Text.translatable("message.mcmti.recordingAudio"), true);
+                MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.recordingAudio"), true);
             }
         }
     }
@@ -42,49 +42,51 @@ public interface EventSystem {
         @Nullable Thread vthread = null;
         while (true) {
             try {
-                if (MinecraftClient.getInstance() != null &&
-                        MinecraftClient.getInstance().player instanceof ClientPlayerEntity player
+                if (MinecraftClient.getInstance() != null
+                        && MinecraftClient.getInstance().player != null
                         && MinecraftClient.getInstance().currentScreen == null
                         && AudioRecorder.instance() != null
                         && SpeechRecognizer.instance() != null) {
                     switch (McmtiConfig.mode) {
                         case AUTO_SEND -> {
                             float[] audio = AudioRecorder.recordCycle();
-                            Thread.ofVirtual().start(() -> {
+                            new Thread(() -> {
                                 String result = SpeechRecognizer.recognize(audio);
                                 if (!result.isEmpty()) {
-                                    player.sendMessage(Text.translatable("message.mcmti.messageSent"), true);
-                                    SpeechRecognizer.sendChatMessage(player, result);
+                                    MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.messageSent"), true);
+                                    SpeechRecognizer.sendChatMessage(MinecraftClient.getInstance().player, result);
                                 }
-                            });
+                            }).start();
                         }
                         case RELEASE_KEY_TO_SEND -> {
                             if (MicrophoneTextInput.RECOGNIZE_KEY.isPressed()) {
                                 float[] audio = AudioRecorder.record();   // loop until key released
-                                vthread = Thread.ofVirtual().start(() -> {
+                                vthread = new Thread(() -> {
                                     String result = SpeechRecognizer.recognize(audio);
                                     if (!result.isEmpty()) {
                                         SCHEDULED_EXECUTOR_SERVICE.schedule(
-                                                () -> player.sendMessage(Text.translatable("message.mcmti.messageSent"), true), 100, TimeUnit.MILLISECONDS);
-                                        SpeechRecognizer.sendChatMessage(player, result);
+                                                () -> MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.messageSent"), true), 100, TimeUnit.MILLISECONDS);
+                                        SpeechRecognizer.sendChatMessage(MinecraftClient.getInstance().player, result);
                                     }
                                 });
+                                vthread.start();
                             } else if (vthread != null && vthread.isAlive()) {
-                                player.sendMessage(Text.translatable("message.mcmti.recognizing"), true);
+                                MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.recognizing"), true);
                             }
                             LockSupport.parkNanos(1000000L);
                         }
                         case RELEASE_KEY_TO_INPUT -> {
                             if (MicrophoneTextInput.RECOGNIZE_KEY.isPressed()) {
                                 float[] audio = AudioRecorder.record();
-                                vthread = Thread.ofVirtual().start(() -> {
+                                vthread = new Thread(() -> {
                                     String result = SpeechRecognizer.recognize(audio);
                                     if (!result.isEmpty()) {
                                         MinecraftClient.getInstance().submit(() -> MinecraftClient.getInstance().setScreen(new ChatScreen(McmtiConfig.prefix + result))).join();
                                     }
                                 });
+                                vthread.start();
                             } else if (vthread != null && vthread.isAlive()) {
-                                player.sendMessage(Text.translatable("message.mcmti.recognizing"), true);
+                                MinecraftClient.getInstance().player.sendMessage(Text.translatable("message.mcmti.recognizing"), true);
                             }
                             LockSupport.parkNanos(1000000L);
                         }
